# onnx_demo_cpp

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  onnx  onnxCXX  onnxruntime_inference.cpp  onnxruntime_inference.h  run.sh
